+ Еще что-то там

--- a/.htaccess
+++ b/.htaccess
@@ -12,8 +12,18 @@ RewriteRule .* index.php [L]
 RewriteRule ^app$ http://%{HTTP_HOST}/ [L]
 RewriteRule ^css$ http://%{HTTP_HOST}/ [L]
 RewriteRule ^images$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^images/avatars$ http://%{HTTP_HOST}/ [L]
 RewriteRule ^js$ http://%{HTTP_HOST}/ [L]
 RewriteRule ^lang$ http://%{HTTP_HOST}/ [L]
 RewriteRule ^resources$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/core$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/core/site_lib$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/core/game_lib$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/core/database$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/core/exceptions$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/controllers$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/switch$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/models$ http://%{HTTP_HOST}/ [L]
+RewriteRule ^app/views$ http://%{HTTP_HOST}/ [L]
 
 Options +FollowSymLinks
